<resources>
    <string name="app_name">Starbucks</string>
    <string name="facebook_app_id">755740902615806</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">8d86d868e4bcc1a1ae261a9caefc6b34</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="recentTransaction_orderName">
        <item name="order1">Cheesecake Milkshake Frappucino Cream Starbucks</item>
        <item name="order2">Coffee Latte Macchiato Pumpkin Spice Starbucks</item>
        <item name="order3">Caramel Macchiato</item>
        <item name="order4">Matcha Green Tea Latte</item>
        <item name="order5">Pink Drink</item>
        <item name="order6">Iced White Chocolate Mocha</item>
        <item name="order7">Nitro Cold Brew with Sweet Cream</item>
    </string-array>
    <string-array name="recentTransaction_orderDate">
        <item name="date1">Today, 17:45 PM</item>
        <item name="date2">Oct 14th 2021</item>
        <item name="date3">Dec 31st 2022</item>
        <item name="date4">Apr 18th 2024</item>
        <item name="date5">Jul 7th 2023</item>
        <item name="date6">Nov 23rd 2023</item>
        <item name="date7">Feb 14th 2024</item>
    </string-array>
    <string-array name="recentTransaction_orderPrice">
        <item name="price1">-$19.65</item>
        <item name="price2">-$18.75</item>
        <item name="price3">-$8.37</item>
        <item name="price4">-$13.99</item>
        <item name="price5">-$27.50</item>
        <item name="price6">-$4.83</item>
        <item name="price7">-$16.75</item>
    </string-array>
    <string-array name="today_type">
        <item name="type1">Payment</item>
        <item name="type2">Reward</item>
        <item name="type3">Payment</item>
        <item name="type4">Reward</item>
        <item name="type5">Payment</item>
    </string-array>
    <string-array name="today_date">
        <item name="date1">10.28.2021</item>
        <item name="date2">9.28.2021</item>
        <item name="date3">8.27.2021</item>
        <item name="date4">7.26.2021</item>
        <item name="date5">6.26.2021</item>
    </string-array>
    <string-array name="today_cost">
        <item name="cost1">-$19.65</item>
        <item name="cost2">-$00.00</item>
        <item name="cost3">-$11.35</item>
        <item name="cost4">-$00.00</item>
        <item name="cost5">-$4.50</item>
    </string-array>
    <string-array name="today_reward">
        <item name="reward1">+5 ⭐️</item>
        <item name="reward2">-12 ⭐</item>
        <item name="reward1">+10 ⭐️</item>
        <item name="reward2">-15 ⭐</item>
        <item name="reward1">+15 ⭐️</item>
    </string-array>
    <string-array name="yestd_type">
        <item name="type1">Payment</item>
        <item name="type2">Payment</item>
    </string-array>
    <string-array name="yestd_date">
        <item name="date1">04.09.2023</item>
        <item name="date2">04.09.2023</item>
    </string-array>
    <string-array name="yestd_cost">
        <item name="cost1">-$19.65</item>
        <item name="cost2">-$4.50</item>

    </string-array>
    <string-array name="yestd_reward">
        <item name="reward1">+5 ⭐️</item>
        <item name="reward2">+12 ⭐</item>
    </string-array>
    <string-array name="prev7Days_type">
        <item name="type1">Payment</item>
        <item name="type2">Reward</item>
        <item name="type3">Payment</item>
        <item name="type4">Reward</item>
        <item name="type5">Payment</item>
    </string-array>
    <string-array name="prev7Days_date">
        <item name="date1">10.28.2021</item>
        <item name="date2">9.28.2021</item>
        <item name="date3">8.27.2021</item>
        <item name="date4">7.26.2021</item>
        <item name="date5">6.26.2021</item>
    </string-array>
    <string-array name="prev7Days_cost">
        <item name="cost1">-$19.65</item>
        <item name="cost2">-$00.00</item>
        <item name="cost3">-$11.35</item>
        <item name="cost4">-$00.00</item>
        <item name="cost5">-$4.50</item>
    </string-array>
    <string-array name="prev7Days_reward">
        <item name="reward1">+5 ⭐️</item>
        <item name="reward2">-12 ⭐</item>
        <item name="reward1">+10 ⭐️</item>
        <item name="reward2">-15 ⭐</item>
        <item name="reward1">+15 ⭐️</item>
    </string-array>
    <string-array name="forYou_caption">
        <item name="caption1">Art in a Cup: Buy One Get One</item>
        <item name="caption2">12th Dec 2021: Pistachio Christmas Tree Frapuccino</item>
    </string-array>
    <string-array name="news_caption">
        <item name="caption1">Elevate Your Tea Experience with New Starbucks Teavana Beverages!</item>
        <item name="caption2">Shop Now: BTS X Starbucks Korea: Limited Edition Menus &amp; Merchanidise In A Pretty Purple Shade</item>
        <item name="caption3">Share the Holiday Spirit with Starbucks</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="copyright">© 2023 Starbucks Coffee Company. All rights reserved.</string>
    <string name="birthday_text">Let us know your birthday so you won\'t miss a birthday treat</string>
    <string name="registerStarbucksCard">To register your Starbucks Card, simply log in to your\nStarbucks Singapore account on the memberships portal\nonline here or our Starbucks Singapore mobile app to add\n(+) it in. If you do not have an account, you may create an\naccount here.</string>
    <string name="registerEmailAddress">If you have any issues in changing your email address,\ndo fill up the form here and share your new and old\nemail address with us. Our team will get back to you within 5 working days.</string>
    <string name="changeAccPassword1">To reset your password, click on the "Forget Password?" button found on the login page here and a reset password link with instructions will be sent to your registered email address.</string>
    <string name="changeAccPassword2">If you have any issues in changing your password, do fill up the form here. Our team will get back to you within 5 working days. If you do not receive the email within the next few minutes, please check your email account\'s Junk/Spam folder</string>
    <string name="passwordCondition1">Have 9 or more characters</string>
    <string name="passwordCondition2">Contain alphabet and numeric characters</string>
    <string name="passwordCondition3">Contain at least 1 special character(eg, !, @, #, $, %, ^)</string>
    <string name="FAQ14">I have selected the wrong birthday month during the activation of my card, how can i change it?</string>
    <string name="wrongBDMonth">Customers are not allowed to make changes to their birthday month on their account. If you\'re looking to change it, do fill up the form here and share your birth month with us, we will assist you accordingly</string>
    <string name="FAQ15">How does starbucks protect my privacy after I register my starbucks Card?</string>
    <string name="cardPrivacy">Starbucks does not sell or share your personal information,\nincluding your name, address, phone number, email\naddress, birth date, financial information etc. With\nthird parties. We take great care in managing your personal\ninformation only in accordance with our Starbucks Privacy\nStatement</string>
    <string name="FAQ16">What methods of payment can be used to activate or reload a Starbucks Card?</string>
    <string name="ReloadStarbucksCard">Cash, Nets or credit card can be used to activate and/or reload a Starbucks Card.</string>
    <string name="FAQ17">Can a Starbucks Card be used to activate or reload another Starbucks Card?</string>
    <string name="StarbucksCardReloadCard">No. Only cash, Nets or credit card can be used to activate\nand/or reload a starbucks Card. However, you can log in to\nyour My Starbucks Card account online at\nwww.starbucks.com.sg or via the Starbucks mobile apps to\ntransfer funds between any of your registered Starbucks Cards.</string>
    <string name="FAQ18">What is the minimum activation amount?</string>
    <string name="MinimumActivationAmount">S$10 is the minimum activation amount.</string>
    <string name="FAQ19">What is the maximum activation amount?</string>
    <string name="MaxActAmount">S$300 is the maximum activation amount.</string>
    <string name="FAQ20">Where can I use my Starbucks Card?</string>
    <string name="WhereToUseCard">Your starbucks Card can be used at all Starbucks stores in\nSingapore except stores located at Changi Airport\n(excluding Jewel).</string>
    <string name="FAQ21">How do I view and manage my Starbucks Card account?</string>
    <string name="viewAndManageCard">You can check your Starbucks Card account details,\ntransactions, Stars balance and Rewards as well as reload\nyour card by logging into your account through our website\nhere or through our Starbucks Singapore mobile apps</string>
    <string name="FAQ22">Will my receipt have my Starbucks Card\nbalance on it when I use it to make a\npurchase?</string>
    <string name="cardReceipt">Yes.</string>
    <string name="FAQ23">Does Starbucks charge any service fee for my Starbucks Card?</string>
    <string name="cardServiceFee">No.</string>
    <string name="FAQ24">How do I reload my Starbucks Card</string>
    <string name="reloadStarbucksCard">You can reload your Starbucks Card at any participating\nStarbucks store in Singapore or through our the Starbucks Singapore mobile application. You can reload a minimum of S$10 each time(i.e. you can only reload in\ndenominations of S$10 per load). The maximum balance\nthat can be stored on a Starbucks Card at any time id S$300.</string>
    <string name="FAQ25">Can I use my Starbucks Card when i travel internationally?</string>
    <string name="travelCard">No. Singapore Starbucks Cards cannot be used in any other\nmarkets. The cards can only be used in Singapore.</string>
    <string name="FAQ26">What should I do if my Starbucks Card is lost or stolen?</string>
    <string name="stolenCard">If you have registered your Starbucks Card or have added it\nto an existing account, please log into your account through\nthe member\'s portal, click "My Cards", and select the Card\nyou would like to report lost. Click on "Report Lost Card"\nand follow the instructions given to transfer the balance of your lost Card to another existing Card or request for a\nreplacement card. Alternatively, you may also report lost of\nyour Starbucks Card via the\n\nStarbucks Singapore App under the "Manage" section\nof your Starbucks Card.\n\nIf you have not registered your Starbucks Card, please\nregister if before using it to make purchases in order to\nearn Stars and collect Rewards on all your purchases. If you are unable to register, do reach out the customer care\nteam for further assistance.</string>
    <string name="FAQ27">Can the Starbucks Card be refunded?</string>
    <string name="refundCard">Refunds can only be done personally at the Starbucks head\n office in Singapore and in accordance with the refund\npolicy and procedures in the Starbucks Card Terms of Use.\nYou must present the original sale receipt for the purchase\nof the Starbucks Card together with the card for a refund to be processed.</string>
    <string name="FAQ97">How old do I have to be to work at Starbucks?</string>
    <string name="howOldToWork">To work for Starbucks you must be at least 16 years old.</string>
    <string name="FAQ98">How do I apply for a job in Starbucks?</string>
    <string name="applyJob">Click ere to apply or email your resume to career@starbucks.com.sg</string>
    <string name="FAQ99">How will I be notified whether I get the job?</string>
    <string name="notifiedOfJob">Only shortlisted applicants will be notified within 7 working days.</string>
</resources>